[gd_scene load_steps=4 format=3 uid="uid://dnolnatqmss71"]

[ext_resource type="Script" path="res://UI/title_screen/tilte-ui.gd" id="1_b7pt4"]
[ext_resource type="AudioStream" uid="uid://bcgjeia5je7t8" path="res://sounds/Braam - Show Title.wav" id="2_lw5h4"]
[ext_resource type="AudioStream" uid="uid://b8sacnusj5hl6" path="res://sounds/Drum.mp3" id="3_iwh0l"]

[node name="title-menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7pt4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.076
anchor_top = 0.605
anchor_right = 0.076
anchor_bottom = 0.605
offset_left = -55.552
offset_top = 31.96
offset_right = 11.448
offset_bottom = 132.96
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.98859, 1.80616)

[node name="start-button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "start"

[node name="options-button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "options"

[node name="quit-button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "quit"

[node name="startup_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lw5h4")

[node name="select_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_iwh0l")

[connection signal="pressed" from="VBoxContainer/start-button" to="." method="_on_startbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/options-button" to="." method="_on_optionsbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/quit-button" to="." method="_on_quitbutton_pressed"]
